<resources>
    <string name="app_name">SBS</string>
    <string name="title_activity_splash">SBS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome</string>
    <string name="nav_header_subtitle">Guest user</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- Login-->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">User name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    /*Survey resources*/

    <string name="title_activity_survey">Survey</string>
    <string name="block_caption">Select Block</string>
    <string name="panchayat_caption">Select Panchayat</string>
    <string name="benef_name">Beneficiary Name</string>
    <string name="benef_father_name">Father/Husband Name</string>
    <string name="benef_adhar">Adhar No.</string>
    <string name="benef_family_count">Family Member Count</string>
    <string name="title_activity_reports">ReportsActivity</string>
    <string name="btnSave_title">Save as Draft</string>
    <string name="btnSubmit_title">Submit</string>
    <string name="btnSync">Submit</string>

    <!-- Survey List-->

    <string name="title_activity_survey_list">Manage Surveys</string>
    <string name="title_activity_surveys_to_sync">Sync Surveys</string>
    <string name="survey_index">Survey ID</string>
    <string name="survey_draft_saved">Survey saved successfully</string>
    <string name="saving_record">Your record is being saved...</string>
    <string name="sure_to_save">Are you sure to save the record?</string>
    <string name="save_as_draft">Save as Draft</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="panchayat">Panchayat</string>
    <string name="block">Block</string>
    <string name="benef_father_name_short">Father/Husband</string>

    <!-- Add User-->
    <string name="title_activity_add_user">Add User</string>
    <string name="title_activity_user_list">Manage Users</string>
    <string name="add_user_detail">User Detail</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="user_type">User Type</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="generic_error">Failed to process your request</string>
    <string name="success_msg">Request completed successfully</string>
    <string name="fetching_data">Fetching data...</string>
    <string name="processing_request">Processing your request...</string>

    <!-- Main Activity -->
    <string name="take_survey">Take Survey</string>
    <string name="manage_users">Manage Users</string>
    <string name="sure_to_delete">Are you sure to delete this record?</string>
    <string name="syncSurveys">Sync Surveys</string>
    <string name="failed_save_all">Failed to process all records</string>


    <!-- Block Activity -->

    <string name="title_activity_add_block">Add Block</string>
    <string name="title_activity_block_list">Manage Blocs</string>
    <string name="add_block_detail">Block Detail</string>

    <!-- Panchayat Activity -->

    <string name="title_activity_add_panchayat">Add Panchayat</string>
    <string name="title_activity_panchayat_list">Manage Panchayats</string>
    <string name="add_panchayat_detail">Panchayat Detail</string>
    <string name="no_internet">No Internet</string>
    <string name="generic_server_down">Server returned error.</string>
    <string name="title_activity_sync_db">Sync With Server</string>
    <string name="sync_with_server">Synchronizing app with server.</string>
    <string name="sync_success">App sycn with server is successful.</string>
    <string name="try_again">Please try again.</string>
    <string name="sync_text">The application works both in online as well as offline mode. It is advisable to sync your app with server before using it.</string>
    <string name="need_internet_text">Note: You will need internet connection to sync your app with server.</string>
    <string name="check_internet">Please check your internet connection and try again.</string>
    <string name="server_connection_error">Unable to connect to server. Please check your internet connection and try again.</string>
    <string name="server_error">Server responded with error. Please try again.</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="manage_survey">Manage Surveys</string>
    <string name="manage_blocks">Manage Blocks</string>
    <string name="manage_panchayats">Manage Panchayats</string>
    <string name="district_wise">District wise</string>
    <string name="view_reports">View Reports</string>
    <string name="manage_master_data">Manage master data</string>
    <string name="title_activity_main_admin">Home</string>
    <string name="primary_activities">Primary Activities</string>
    <string name="view_draft_survey">View Draft Surveys</string>
    <string name="view_report_district">District wise report</string>
    <string name="view_report_block">Block wise report</string>
    <string name="view_report_panchayat">Panchayat wise report</string>
    <string name="view_report_benef">Beneficiary wise report</string>
    <string name="created_by">Created By</string>
    <string name="created_at">Taken At</string>
    <string name="view_more">View More</string>
    <string name="title_activity_manage_survey">Manage Surveys</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_survey_detail">Survey Detail</string>

    <string name="benef_family_count_short">Member Count</string>
    <string name="delete_draft">Delete Draft</string>
    <string name="title_activity_report_by_block">Report by District</string>

</resources>
