<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical"
    tools:context=".AdminActivity">

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/manage_master_data"/>

    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nav_manage_survey"
        android:text="@string/manage_survey"
        android:onClick="onNavigationButtonClicked"/>

    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nav_manage_block"
        android:text="@string/manage_blocks"
        android:onClick="onNavigationButtonClicked"/>

    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nav_manage_panchayat"
        android:text="@string/manage_panchayats"
        android:onClick="onNavigationButtonClicked"/>

    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nav_manage_user"
        android:text="@string/manage_users"
        android:onClick="onNavigationButtonClicked"/>

    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nav_manage_reports"
        android:text="@string/view_reports"
        android:onClick="onNavigationButtonClicked"/>

    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nav_take_survey"
        android:text="@string/take_survey"
        android:onClick="onNavigationButtonClicked"/>


</android.support.constraint.LinearLayoutCompat>