<?xml version="1.0" encoding="utf-8"?>

<GridLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:useDefaultMargins="true"
    android:alignmentMode="alignBounds"
    android:columnOrderPreserved="false"
    android:columnCount="2"
    android:rowCount="6"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/survey_index"
        android:layout_marginLeft="10dp"
        android:layout_gravity="left|top"
        android:layout_row="0"
        android:layout_column="0"/>
    <TextView
        android:id="@+id/lblSurveyNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginLeft="10dp"
        android:layout_gravity="left|top"
        android:layout_row="0"
        android:layout_column="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/benef_name"
            android:layout_gravity="left|top"
            android:layout_marginLeft="10dp"
            android:layout_row="1"
            android:layout_column="0"/>
        <TextView
            android:id="@+id/lblBenefName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="left|top"
            android:layout_marginLeft="10dp"
            android:layout_row="1"
            android:layout_column="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/benef_father_name_short"
            android:layout_marginLeft="10dp"
            android:layout_gravity="left|top"
            android:layout_row="2"
            android:layout_column="0"/>
        <TextView
            android:id="@+id/lblBenefFatherName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="left|top"
            android:layout_marginLeft="10dp"
            android:layout_row="2"
            android:layout_column="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/panchayat"
            android:layout_marginLeft="10dp"
            android:layout_gravity="left|top"
            android:visibility="gone"
            android:layout_row="3"
            android:layout_column="0"/>
        <TextView
            android:id="@+id/lblBenefPanchayat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="left|top"
            android:layout_marginLeft="10dp"
            android:visibility="gone"
            android:layout_row="3"
            android:layout_column="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/block"
            android:layout_marginLeft="10dp"
            android:layout_gravity="left|top"
            android:id="@+id/lblBlockLabel"
            android:visibility="gone"
            android:layout_row="4"
            android:layout_column="0"/>
        <TextView
            android:id="@+id/lblBlockValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="left|top"
            android:layout_marginLeft="10dp"
            android:visibility="gone"
            android:layout_row="4"
            android:layout_column="1"/>


    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="2">


    <Button
        android:id="@+id/btnSync"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/btnSync"
        android:background="@color/btn_face"
        android:textColor="@color/font_light"
        android:onClick="SubmitSurveyClicked"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/update"
        android:background="@color/btn_face"
        android:textColor="@color/font_light"
        android:onClick="UpdateSurveyClicked"
        android:layout_weight="1"/>
        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/delete"
            android:background="@color/btn_face"
            android:textColor="@color/font_light"
            android:onClick="DeleteSurveyClicked"
            android:layout_weight="1"/>
    </LinearLayout>
    </GridLayout>
