<?xml version="1.0" encoding="utf-8"?>

<GridLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:useDefaultMargins="true"
    android:alignmentMode="alignBounds"
    android:columnOrderPreserved="false"
    android:columnCount="2"
    android:rowCount="6"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_marginLeft="10dp"
        android:layout_gravity="left|top"
        android:layout_row="0"
        android:layout_column="0"/>
    <TextView
        android:id="@+id/lblName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginLeft="10dp"
        android:layout_gravity="left|top"
        android:layout_row="0"
        android:layout_column="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:layout_gravity="left|top"
            android:layout_marginLeft="10dp"
            android:layout_row="1"
            android:layout_column="0"/>
        <TextView
            android:id="@+id/lblPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="left|top"
            android:layout_marginLeft="10dp"
            android:layout_row="1"
            android:layout_column="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_username"
            android:layout_marginLeft="10dp"
            android:layout_gravity="left|top"
            android:layout_row="2"
            android:layout_column="0"/>
        <TextView
            android:id="@+id/lblUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="left|top"
            android:layout_marginLeft="10dp"
            android:layout_row="2"
            android:layout_column="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_password"
            android:layout_marginLeft="10dp"
            android:layout_gravity="left|top"
            android:layout_row="3"
            android:layout_column="0"/>
        <TextView
            android:id="@+id/lblPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="left|top"
            android:layout_marginLeft="10dp"
            android:layout_row="3"
            android:layout_column="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_type"
            android:layout_marginLeft="10dp"
            android:layout_gravity="left|top"
            android:layout_row="4"
            android:layout_column="0"/>
        <TextView
            android:id="@+id/lblUsertype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="left|top"
            android:layout_marginLeft="10dp"
            android:layout_row="4"
            android:layout_column="1"/>


    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/update"
        android:layout_gravity="center"
        android:background="@color/btn_face"
        android:textColor="@color/font_light"
        android:onClick="UpdateUserClicked"
        android:layout_row="5"
        android:layout_column="0"/>
    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:text="@string/delete"
        android:background="@color/btn_face"
        android:textColor="@color/font_light"
        android:onClick="DeleteUserClicked"
        android:layout_row="5"
        android:layout_column="1"/>
    </GridLayout>
