<?xml version="1.0" encoding="utf-8"?>

<GridLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:useDefaultMargins="true"
    android:alignmentMode="alignBounds"
    android:columnOrderPreserved="false"
    android:columnCount="2"
    android:rowCount="7"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/survey_index"
        android:layout_marginLeft="10dp"
        android:layout_gravity="left|top"
        android:layout_row="0"
        android:layout_column="0"/>
    <TextView
        android:id="@+id/lblSurveyNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginLeft="10dp"
        android:layout_gravity="left|top"
        android:layout_row="0"
        android:layout_column="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/benef_name"
            android:layout_gravity="left|top"
            android:layout_marginLeft="10dp"
            android:layout_row="1"
            android:layout_column="0"/>
        <TextView
            android:id="@+id/lblBenefName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="left|top"
            android:layout_marginLeft="10dp"
            android:layout_row="1"
            android:layout_column="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/benef_father_name_short"
            android:layout_marginLeft="10dp"
            android:layout_gravity="left|top"
            android:layout_row="2"
            android:layout_column="0"/>
        <TextView
            android:id="@+id/lblBenefFatherName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="left|top"
            android:layout_marginLeft="10dp"
            android:layout_row="2"
            android:layout_column="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/panchayat"
            android:layout_marginLeft="10dp"
            android:layout_gravity="left|top"
            android:visibility="gone"
            android:layout_row="3"
            android:layout_column="0"/>
        <TextView
            android:id="@+id/lblBenefPanchayat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="left|top"
            android:layout_marginLeft="10dp"
            android:visibility="gone"
            android:layout_row="3"
            android:layout_column="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/block"
            android:layout_marginLeft="10dp"
            android:layout_gravity="left|top"
            android:id="@+id/lblBlockLabel"
            android:visibility="gone"
            android:layout_row="4"
            android:layout_column="0"/>
        <TextView
            android:id="@+id/lblBlockValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="left|top"
            android:layout_marginLeft="10dp"
            android:visibility="gone"
            android:layout_row="4"
            android:layout_column="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/created_by"
        android:layout_marginLeft="10dp"
        android:layout_gravity="left|top"
        android:layout_row="5"
        android:layout_column="0"/>
    <TextView
        android:id="@+id/lblCreatedBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_gravity="left|top"
        android:layout_marginLeft="10dp"
        android:layout_row="5"
        android:layout_column="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/created_at"
        android:layout_marginLeft="10dp"
        android:layout_gravity="left|top"
        android:layout_row="6"
        android:layout_column="0"/>
    <TextView
        android:id="@+id/lblTakenAT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_gravity="left|top"
        android:layout_marginLeft="10dp"
        android:layout_row="6"
        android:layout_column="1"/>

    </GridLayout>
